# Ling

./: .editorconfig  LICENCE  LICENSE  README.md
examples/dpo/: ling_full_dpo.yaml  ling_lora_dpo.yaml
examples/sft/: ling_full_sft.yaml  ling_lora_sft.yaml
inference/mindie/: convert_bin_to_safetensor.py  convert_bin_to_safetensor_base.py
inference/mindie/lite/: config.base.json
inference/mindie/plus/: model_base_config.json  model_chat_config.json
inference/vllm/: bailing_moe.patch
mindie_config/: convert_bin_to_safetensor.py  set_env.sh
mindie_config/atb_models/: CMakeLists.txt  README.md  public_address_statement.md  setup.py
mindie_config/atb_models/atb_framework/operations/: CMakeLists.txt
mindie_config/atb_models/atb_llm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mindie_config/atb_models/atb_llm/common_op_builders/: common_op_builder_manager.py  data_type.py
mindie_config/atb_models/atb_llm/runner/: __init__.py  (+1 more)
mindie_config/atb_models/examples/: README.md  run_fa.py
mindie_config/atb_models/output/atb_models/tests/unittest/: CMakeLists.txt
mindie_config/atb_models/requirements/: requirements.txt
mindie_config/atb_models/scripts/: build.sh  get_cxx11_abi_flag.py  opensource_build.sh  release_folder.ini  set_env.sh
mindie_config/lite/: config.base.json  config.json  model_base_config.json
mindie_config/plus/: config.base.json  config.json
models/: configuration_bailing_moe.py  modeling_bailing_moe.py
tutorials/dpo/: bailing_full_dpo.yaml  bailing_lora_dpo.yaml
tutorials/sft/: bailing_full_sft.yaml  bailing_lora_sft.yaml
(+864 files in other folders)
